// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dataset Properties Panel Edit existing dataset 1`] = `
<div
  className="domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav panel-heading"
    id="dataset-header-id"
    onClick={[Function]}
  >
    <span
      className="domain-panel-status-icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 "
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
    <span
      className="domain-panel-title"
    >
      Dataset1 - Dataset Properties
    </span>
    <span
      className="pull-right"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-minus-square fa-w-14 fa-lg domain-form-collapse-btn"
        data-icon="minus-square"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="row"
          >
            <div
              className="col-xs-12"
            >
              <a
                className="domain-field-float-right"
                href="https://www.labkey.org/Documentation/wiki-page.view?name=createDataset"
                target="_blank"
              >
                Learn more about designing datasets
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-5 col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Basic Properties
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Name
                <span
                  className="label-help-target"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                    data-icon="question-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                 *
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="name"
                onChange={[Function]}
                placeholder="Enter a name for this dataset"
                type="text"
                value="Dataset1"
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Label
                <span
                  className="label-help-target"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                    data-icon="question-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                 *
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="label"
                onChange={[Function]}
                type="text"
                value="Dataset One"
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Description
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <textarea
                className="form-control textarea-noresize"
                id="description"
                onChange={[Function]}
                value="This is the first dataset"
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Category
                <span
                  className="label-help-target"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                    data-icon="question-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <div
                className=" css-2b097c-container"
                onKeyDown={[Function]}
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-yk16xz-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-g1d714-ValueContainer"
                  >
                    <div
                      className=" css-1wa3eu0-placeholder"
                    >
                      Select dataset category
                    </div>
                    <div
                      className="css-b8ldur-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={false}
                          id="react-select-4-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="category"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
            <div
              className="col-xs-1"
            />
          </div>
        </div>
        <div
          className="col-md-5 col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Data Row Uniqueness
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="dataset_data_row_uniqueness_container"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={0}
                />
                Participants
                 only (demographic data)
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={1}
                />
                Participants
                 and 
                visits
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={true}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={2}
                />
                Participants
                , 
                visits
                , and additional key field
              </label>
            </div>
          </div>
          <div
            className="dataset_data_row_element_show"
          >
            <div
              className="margin-top row"
            >
              <div
                className="col-xs-5"
              >
                Additional Key 
                <span
                  className="domain-no-wrap"
                >
                  Field
                  <span
                    className="label-help-target"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                      data-icon="question-circle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </span>
                  
                </span>
              </div>
              <div
                className="col-xs-7"
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <div
                      className=" css-2b097c-container"
                      id="selectinput-1"
                      onKeyDown={[Function]}
                    >
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        className="select-input__control css-yk16xz-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className="select-input__value-container select-input__value-container--has-value css-g1d714-ValueContainer"
                        >
                          <div
                            className="select-input__single-value css-1uccc91-singleValue"
                          >
                            Name
                          </div>
                          <div
                            className="css-b8ldur-Input"
                          >
                            <div
                              className="select-input__input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-autocomplete="list"
                                autoCapitalize="none"
                                autoComplete="off"
                                autoCorrect="off"
                                disabled={false}
                                id="react-select-5-input"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                spellCheck="false"
                                style={
                                  Object {
                                    "background": 0,
                                    "border": 0,
                                    "boxSizing": "content-box",
                                    "color": "inherit",
                                    "fontSize": "inherit",
                                    "label": "input",
                                    "opacity": 1,
                                    "outline": 0,
                                    "padding": 0,
                                    "width": "1px",
                                  }
                                }
                                tabIndex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            className="select-input__indicator-separator css-1okebmr-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            className="select-input__indicator select-input__dropdown-indicator css-tlfecz-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <svg
                              aria-hidden="true"
                              className="css-tj5bde-Svg"
                              focusable="false"
                              height={20}
                              viewBox="0 0 20 20"
                              width={20}
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="keyPropertyName"
                        type="hidden"
                        value="Name"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="dataset_data_row_element_show"
          >
            <div
              className="checkbox"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  id="keyPropertyManaged"
                  onChange={[Function]}
                  type="checkbox"
                />
                Let server manage fields to make entries unique
              </label>
            </div>
          </div>
        </div>
        <div
          className="col-md-2 col-xs-12"
        >
          <button
            className="domain-field-float-right btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Advanced Settings
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dataset Properties Panel New dataset 1`] = `
<div
  className="domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav panel-heading"
    id="dataset-header-id"
    onClick={[Function]}
  >
    <span
      className="domain-panel-status-icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-check-circle fa-w-16 "
        data-icon="check-circle"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
    <span
      className="domain-panel-title"
    >
      Dataset Properties
    </span>
    <span
      className="pull-right"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-minus-square fa-w-14 fa-lg domain-form-collapse-btn"
        data-icon="minus-square"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={Object {}}
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM92 296c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h264c6.6 0 12 5.4 12 12v56c0 6.6-5.4 12-12 12H92z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      <div
        className="margin-bottom row"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="row"
          >
            <div
              className="col-xs-12"
            >
              <a
                className="domain-field-float-right"
                href="https://www.labkey.org/Documentation/wiki-page.view?name=createDataset"
                target="_blank"
              >
                Learn more about designing datasets
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-md-5 col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Basic Properties
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Name
                <span
                  className="label-help-target"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                    data-icon="question-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                 *
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="name"
                onChange={[Function]}
                placeholder="Enter a name for this dataset"
                type="text"
                value={null}
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Label
                <span
                  className="label-help-target"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                    data-icon="question-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="label"
                onChange={[Function]}
                type="text"
                value={null}
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Description
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <textarea
                className="form-control textarea-noresize"
                id="description"
                onChange={[Function]}
                value=""
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="margin-top row"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Category
                <span
                  className="label-help-target"
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  <svg
                    aria-hidden="true"
                    className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                    data-icon="question-circle"
                    data-prefix="fas"
                    focusable="false"
                    role="img"
                    style={Object {}}
                    viewBox="0 0 512 512"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                      fill="currentColor"
                      style={Object {}}
                    />
                  </svg>
                </span>
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <div
                className=" css-2b097c-container"
                onKeyDown={[Function]}
              >
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  className="css-1f43avz-a11yText-A11yText"
                />
                <div
                  className=" css-yk16xz-control"
                  onMouseDown={[Function]}
                  onTouchEnd={[Function]}
                >
                  <div
                    className=" css-g1d714-ValueContainer"
                  >
                    <div
                      className=" css-1wa3eu0-placeholder"
                    >
                      Select dataset category
                    </div>
                    <div
                      className="css-b8ldur-Input"
                    >
                      <div
                        className=""
                        style={
                          Object {
                            "display": "inline-block",
                          }
                        }
                      >
                        <input
                          aria-autocomplete="list"
                          autoCapitalize="none"
                          autoComplete="off"
                          autoCorrect="off"
                          disabled={false}
                          id="react-select-2-input"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          spellCheck="false"
                          style={
                            Object {
                              "background": 0,
                              "border": 0,
                              "boxSizing": "content-box",
                              "color": "inherit",
                              "fontSize": "inherit",
                              "label": "input",
                              "opacity": 1,
                              "outline": 0,
                              "padding": 0,
                              "width": "1px",
                            }
                          }
                          tabIndex="0"
                          type="text"
                          value=""
                        />
                        <div
                          style={
                            Object {
                              "height": 0,
                              "left": 0,
                              "overflow": "scroll",
                              "position": "absolute",
                              "top": 0,
                              "visibility": "hidden",
                              "whiteSpace": "pre",
                            }
                          }
                        >
                          
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    className=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      className=" css-1okebmr-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      className=" css-tlfecz-indicatorContainer"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <svg
                        aria-hidden="true"
                        className="css-tj5bde-Svg"
                        focusable="false"
                        height={20}
                        viewBox="0 0 20 20"
                        width={20}
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="category"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
            <div
              className="col-xs-1"
            />
          </div>
        </div>
        <div
          className="col-md-5 col-xs-12"
        >
          <div
            className="domain-field-section-heading"
          >
            Data Row Uniqueness
            <span
              className="label-help-target"
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              <svg
                aria-hidden="true"
                className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                data-icon="question-circle"
                data-prefix="fas"
                focusable="false"
                role="img"
                style={Object {}}
                viewBox="0 0 512 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  fill="currentColor"
                  style={Object {}}
                />
              </svg>
            </span>
          </div>
          <div
            className="dataset_data_row_uniqueness_container"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={0}
                />
                Participants
                 only (demographic data)
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={true}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={1}
                />
                Participants
                 and 
                visits
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={2}
                />
                Participants
                , 
                visits
                , and additional key field
              </label>
            </div>
          </div>
          <div
            className="dataset_data_row_element_hide"
          >
            <div
              className="margin-top row"
            >
              <div
                className="col-xs-5"
              >
                Additional Key 
                <span
                  className="domain-no-wrap"
                >
                  Field
                  <span
                    className="label-help-target"
                    onMouseOut={[Function]}
                    onMouseOver={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="svg-inline--fa fa-question-circle fa-w-16 fa-1x label-help-icon"
                      data-icon="question-circle"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      style={Object {}}
                      viewBox="0 0 512 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                        fill="currentColor"
                        style={Object {}}
                      />
                    </svg>
                  </span>
                  
                </span>
              </div>
              <div
                className="col-xs-7"
              >
                <div
                  className=""
                >
                  <div
                    className=""
                  >
                    <div
                      className="select-input--is-disabled css-14jk2my-container"
                      id="selectinput-0"
                      onKeyDown={[Function]}
                    >
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                      />
                      <div
                        className="select-input__control select-input__control--is-disabled css-1fhf3k1-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className="select-input__value-container css-g1d714-ValueContainer"
                        >
                          <div
                            className="select-input__placeholder css-1wa3eu0-placeholder"
                          >
                            Select...
                          </div>
                          <div
                            className="css-1bwsx9e-Input"
                          >
                            <div
                              className="select-input__input"
                              style={
                                Object {
                                  "display": "inline-block",
                                }
                              }
                            >
                              <input
                                aria-autocomplete="list"
                                autoCapitalize="none"
                                autoComplete="off"
                                autoCorrect="off"
                                disabled={true}
                                id="react-select-3-input"
                                onBlur={[Function]}
                                onChange={[Function]}
                                onFocus={[Function]}
                                required={false}
                                spellCheck="false"
                                style={
                                  Object {
                                    "background": 0,
                                    "border": 0,
                                    "boxSizing": "content-box",
                                    "color": "inherit",
                                    "fontSize": "inherit",
                                    "label": "input",
                                    "opacity": 1,
                                    "outline": 0,
                                    "padding": 0,
                                    "width": "1px",
                                  }
                                }
                                tabIndex="0"
                                type="text"
                                value=""
                              />
                              <div
                                style={
                                  Object {
                                    "height": 0,
                                    "left": 0,
                                    "overflow": "scroll",
                                    "position": "absolute",
                                    "top": 0,
                                    "visibility": "hidden",
                                    "whiteSpace": "pre",
                                  }
                                }
                              >
                                
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            className="select-input__indicator-separator css-109onse-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            className="select-input__indicator select-input__dropdown-indicator css-tlfecz-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <svg
                              aria-hidden="true"
                              className="css-tj5bde-Svg"
                              focusable="false"
                              height={20}
                              viewBox="0 0 20 20"
                              width={20}
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="dataset_data_row_element_hide"
          >
            <div
              className="checkbox disabled"
            >
              <label
                title=""
              >
                <input
                  disabled={true}
                  id="keyPropertyManaged"
                  onChange={[Function]}
                  type="checkbox"
                />
                Let server manage fields to make entries unique
              </label>
            </div>
          </div>
        </div>
        <div
          className="col-md-2 col-xs-12"
        >
          <button
            className="domain-field-float-right btn btn-default"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            Advanced Settings
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
